# peso_tracker

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  update-database.yml
api/: db_dependencies.py  schema.py
api/app/routes/: exchange_rates.py  rates.py
api/app/services/: db_dependencies.py
api/models/: schema.py
etl/: main.py
etl/data/raw/: raw.py
etl/database/: supabase_insertion.py  supabasedb.py
etl/models/: models.py
github/workflows/: update-database.yml
src/: app.py  database.db
src/data/procesed/: procesed.py
src/database/: peso_tracker.db
src/github/workflows/: update-database.yml
src/models/: models.py
