[project]
name = "peso-tracker"
version = "0.1.0"
description = "ETL Cotizacion del Peso Uruguayo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "supabase>=2.10.0",
    "validators>=0.34.0",
]
